--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "jellyplex-sync"
-version = "0.1.3"
+version = "0.1.4"
 description = "Convert your media library between Jellyfin and Plex formats by creating a hard-linked mirror"
-authors = [{ name = "Stefan Schönberger", email = "mail@sniner.dev" }]
+authors = [{ name = "Stefan Schönberger", email = "stefan@sniner.dev" }]
 requires-python = ">=3.12"
 readme = "README.md"
 classifiers = [
@@ -31,6 +31,20 @@ addopts = "-ra -q"
 testpaths = ["tests"]
 
 [tool.pyright]
+typeCheckingMode = "standard"
+useLibraryCodeForTypes = true
 venvPath = "."
 venv = ".venv"
-disableBytesTypePromotions = true
+
+[tool.ruff]
+line-length = 96
+
+[tool.ruff.lint]
+ignore = ["E402"]
+per-file-ignores = { "__init__.py" = ["F401"] }
+extend-select = [
+    "I",   # isort
+    "UP",  # pyupgrade
+    "SIM", # flake8-simplify
+    "B",   # flake8-bugbear
+]
